--- a/blocks/ai_gen_block_4723888.liquid
+++ b/blocks/ai_gen_block_4723888.liquid
@@ -22,6 +22,7 @@
     text-align: center;
     margin-bottom: 60px;
     position: relative;
+    padding-top: {{ block.settings.header_padding_top }}px;
   }
 
   .ai-elegant-carousel__title-{{ ai_gen_id }} {
@@ -693,6 +694,16 @@
       "unit": "px",
       "label": "Card border radius",
       "default": 16
+    },
+    {
+      "type": "range",
+      "id": "header_padding_top",
+      "min": 0,
+      "max": 100,
+      "step": 5,
+      "unit": "px",
+      "label": "Header top padding",
+      "default": 0
     },
     {
       "type": "header",
